v0.0.3 (xxx)
- added support for repeating elements (like page numbers) via add_repeating_element
- Ensured consistent behaviour WRT functions moving the internal cursor 
  - functions that require positioning info (cell, shapes, etc) will not move the cursor at all
  - functions where positioning info in optional (text, image, etc), the cursor will be moved to the bottom left
    corner of the object
- Ensure no unrecognised options are provided to various functions
- expanded spec coverage

v0.0.2 (11th January 2008)
- Added support for a range of extra image formats (jpg, pdf, gif, etc)
- Various documentation improvements 
- improved the text functions a little, but still lots more to go

v0.0.1 (9th January 2008)
- Initial, pre-alpha, eats small children for breakfast release